# openGL

./: .gitignore  CMakeLists.txt  main.cpp  run-program.sh
app/: app.h  camera.h  geometry.h  shader.h
app/shaders/: fragment.frag  shader.h  vertex.frag
app/textures/: texture.h
assets/shaders/: axis.frag  axis.geom  curve.geom  curve.vert  derivative.frag  derivative.geom  f.shader  func.frag  func.geom  func.vert  g.shader  g2.shader  v.vert  vertex.vert
include/: glad.c  glad.h  stb_image.h
shaders/: fragment.frag  shader.h  vertex.frag
textures/: texture.h
window/: app.h
